# HTTWS

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c  http_test.c  websocket_test.c
include/: body.h  header.h  http.h  httws.h  request.h  response.h  websocket.h
src/: body.c  header.c  http.c  httws.c  request.c  response.c  websocket.c
